Fixed the splash page being visible problem. Removed parallax scrolling for mobile bc it was glitchy

--- a/css/contact.css
+++ b/css/contact.css
@@ -61,6 +61,8 @@
 #contact-image
 {
 	overflow: visible;
+	background-color: white;
+	padding-top: 200px;
 }
 	#contact-image>img/*for the cloud at bottom*/
 	{
